tests/snapshots/cli_matrix__row_011_wrap_stdout.snap
---
source: tests/cli_matrix.rs
expression: stdout_result.envelope(&stdout_case)
---
case: row_011_wrap
mode: stdout
args: --wrap --breaks --ellipsis --fences --footnotes
status: code: 0

[stdout]
---
title: Matrix
---

Heading
-----

______________________________________________________________________

Text… after break.

[stderr]

[file]
<not applicable>
