tests/snapshots/cli_matrix__row_100_wrap_in_place.snap
---
source: tests/cli_matrix.rs
expression: in_place_result.envelope(&in_place_case)
---
case: row_100_wrap
mode: in_place
args: --wrap --renumber --fences --footnotes --headings --in-place
status: code: 0

[stdout]

[stderr]

[file]
| Name  | Notes                                |
| ----- | ------------------------------------ |
| alpha | Use *`cargo test`* before merging... |

1. first item
2. second item with enough text to wrap around the configured column width when
   wrapping is enabled for the matrix harness.

# Title
