tests/snapshots/cli_matrix__row_101_nowrap_in_place.snap
---
source: tests/cli_matrix.rs
expression: in_place_result.envelope(&in_place_case)
---
case: row_101_nowrap
mode: in_place
args: --renumber --ellipsis --fences --code-emphasis --in-place
status: code: 0

[stdout]

[stderr]

[file]
```rust
fn main() {
    println!("dots...");
}
```

Outside… text.

1. first
2. second
